# bt-servant-report-sender

./: .env.template  .gitignore  .importlinter  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-report.yml
docs/: example-bt-servant-log.txt
src/: __init__.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  config.py  log_entry.py  perf_report.py  report_data.py
src/parsers/: __init__.py  log_parser.py  metrics_aggregator.py
src/services/: __init__.py  email_sender.py  log_fetcher.py  pdf_generator.py  report_generator.py
templates/: report.css  report.html.jinja
tests/: __init__.py  conftest.py
tests/cli/: test_main.py
tests/models/: test_log_entry.py  test_perf_report.py
tests/parsers/: test_log_parser.py  test_metrics_aggregator.py
tests/services/: test_email_sender.py  test_log_fetcher.py  test_pdf_generator.py  test_report_generator.py
