[project]
name = "bt-servant-report-sender"
version = "0.1.0"
description = "Utility for sending reports from the bt-servant-engine system"
requires-python = ">=3.12"

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# =============================================================================
# RUFF - Fast linting and formatting
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]

ignore = [
    "E501",     # Line too long - handled by formatter
    "PLR0913",  # Too many arguments - we use 7 max in pylint
    "PLR2004",  # Magic value comparison - too noisy for tests
    "PLC0415",  # Import outside top-level - intentional for circular import avoidance
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",   # Unused function argument (fixtures)
    "PLR2004",  # Magic values in tests are fine
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY - Type checking (moderately strict)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = false

# Core strictness (enabled)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

# Additional checks
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# Not enabled (too noisy)
disallow_any_generics = false
disallow_any_explicit = false
disallow_subclassing_any = false

# Output
show_error_codes = true
show_column_numbers = true
pretty = true

# Third-party handling
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# BANDIT - Security scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 70
show_missing = true

# =============================================================================
# IMPORT-LINTER - Architecture enforcement
# See .importlinter file for contract definitions
# =============================================================================
